// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for open: false 1`] = `
":host {
  display: contents;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot[name="heading"] {
  grid-area: 1/2;
}
slot[name="description"] {
  grid-area: 2/2;
  margin-top: var(--p-spacing-static-xs);
}
h1,h2,h3,h4,h5,h6 {
  all: unset;
  grid-area: 1/2;
  font: var(--p-font-weight-semibold) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
}
p {
  all: unset;
  grid-area: 2/2;
  margin-top: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
}
[popover] {
  all: unset;
  position: fixed;
  inset-inline: 50vw auto;
  width: min(calc(100vw - 2 * var(--p-banner-inset-x,max(22px, 10.625vw - 12px))),var(--p-banner-max-w,100ch));
  visibility: hidden;
  pointer-events: none;
  transition: visibility 0s linear var(--p-transition-duration,var(--p-duration-sm)),transform var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-out);
}
[popover]:popover-open {
  overlay: auto;
}
[popover]::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  [popover] {
    transition: visibility 0s linear var(--p-transition-duration,var(--p-duration-sm)),transform var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-out),overlay var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-out) allow-discrete;
  }
}

.banner {
  display: grid;
  grid-template-columns: auto minmax(0, 1fr) auto auto;
  padding: var(--p-spacing-static-md);
  border-radius: var(--_p-legacy-radius-medium, var(--p-radius-2xl));
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  box-shadow: var(--p-shadow-lg);
  opacity: 0;
  transition: opacity var(--p-transition-duration, var(--p-duration-sm)) var(--p-ease-out);
}
@media(min-width:760px) {
  .banner::before {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1.5rem;
    height: 1.5rem;
    margin-inline-end: var(--p-spacing-static-sm);
    -webkit-mask: undefined center/contain no-repeat;
    mask: undefined center/contain no-repeat;
  }
}

@media(forced-colors:active) {
  .banner {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for open: true 1`] = `
":host {
  display: contents;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot[name="heading"] {
  grid-area: 1/2;
}
slot[name="description"] {
  grid-area: 2/2;
  margin-top: var(--p-spacing-static-xs);
}
h1,h2,h3,h4,h5,h6 {
  all: unset;
  grid-area: 1/2;
  font: var(--p-font-weight-semibold) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
}
p {
  all: unset;
  grid-area: 2/2;
  margin-top: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal) var(--p-typescale-sm) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
}
[popover] {
  all: unset;
  position: fixed;
  inset-inline: 50vw auto;
  width: min(calc(100vw - 2 * var(--p-banner-inset-x,max(22px, 10.625vw - 12px))),var(--p-banner-max-w,100ch));
  visibility: inherit;
  pointer-events: inherit;
  transform: translate3d(-50%,0,0);
  transition: visibility 0s linear var(--p-transition-duration,0s),transform var(--p-transition-duration, var(--p-duration-md)) var(--p-ease-in);
}
[popover]:popover-open {
  overlay: auto;
}
[popover]::backdrop {
  display: none;
}
@supports (transition-behavior: allow-discrete) {
  [popover] {
    transition: visibility 0s linear var(--p-transition-duration,0s),transform var(--p-transition-duration, var(--p-duration-md)) var(--p-ease-in),overlay var(--p-transition-duration, var(--p-duration-md)) var(--p-ease-in) allow-discrete;
  }
}

.banner {
  display: grid;
  grid-template-columns: auto minmax(0, 1fr) auto auto;
  padding: var(--p-spacing-static-md);
  border-radius: var(--_p-legacy-radius-medium, var(--p-radius-2xl));
  -webkit-backdrop-filter: var(--p-blur-frosted);
  backdrop-filter: var(--p-blur-frosted);
  box-shadow: var(--p-shadow-lg);
  opacity: 1;
  transition: opacity var(--p-transition-duration, var(--p-duration-md)) var(--p-ease-in);
}
@media(min-width:760px) {
  .banner::before {
    grid-area: 1/1;
    place-self: center;
    content: "";
    width: 1.5rem;
    height: 1.5rem;
    margin-inline-end: var(--p-spacing-static-sm);
    -webkit-mask: undefined center/contain no-repeat;
    mask: undefined center/contain no-repeat;
  }
}

@media(forced-colors:active) {
  .banner {
    outline: 2px solid CanvasText;
    outline-offset: -2px;
  }
}
"
`;
